Fixed the Dropdown spacing

--- a/meeco_admin/css/style.css
+++ b/meeco_admin/css/style.css
@@ -451,7 +451,7 @@ div.dt-container div.dt-paging ul.pagination{
 }
 
 .action{
-    width:20px ;
+    width:25px ;
 }
 
 .icon-red{
